Added reporter , basic test class

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /target/
+/test-output/
+*.html
+*.png
 *.classpath
 *.settings
 *.project
+*.log
 .settings/org.eclipse.jdt.core.prefs
 .settings/org.eclipse.m2e.core.prefs
