--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -3,11 +3,12 @@ baseURL = https://sso.rajasthan.gov.in/signin
 # specify browser name , supported values : chrome, ie ,Firefox, ff
 browser =  chrome
 
-defaultUserName = 
-defaultPassword =
+defaultUserName = Dimple
+defaultPassword = 123456
 
 #Milliseconds 
-shortWait = 10000 
+shortWait = 10000
 mediumWait = 30000
 longWait = 60000
+
 
