--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
 	<name>TestFramework</name>
 	<description>A test framework</description>
 
+	<packaging>jar</packaging>
+
 
 	<dependencies>
 		<dependency>
@@ -75,6 +77,17 @@
 			<version>1.0.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -88,10 +101,13 @@
 				<version>2.22.0</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>sjms_suite.xml</suiteXmlFile>
+						<suiteXmlFile>TestSuite.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-compiler-plugin</artifactId> 
+				<version>3.7.0</version> <configuration> <source>1.8</source> <target>1.8</target> 
+				</configuration> </plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
